--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "x-tunnel-ssh",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "open ssh tunnel",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "clear": "node tools/clear.js",
-    "dev": "tsc && node dist/index.js"
+    "dev": "tsc && node dist/index.js",
+    "redis": "node ./dist/redis.js",
+    "mysql": "node ./dist/mysql.js"
   },
   "bin": {
     "open-tunnel": "./dist/index.js"
   },
   "dependencies": {
-    "tunnel-ssh": "4.1.6",
+    "tunnel-ssh": "^5.1.1",
     "x-command-parser": "^0.0.6"
   },
   "devDependencies": {
     "@types/node": "^10.9.4",
-    "@types/tunnel-ssh": "^4.1.0"
+    "@types/tunnel-ssh": "^5.0.2",
+    "typescript": "^5.2.2"
   },
   "repository": "https://github.com/koaqiu/x-mysql.git",
   "author": "koaqiu <koaqiu@gmail.com>",
